Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </header>
         </header>
         <section class="home-hero">
-          <a href="sf.html" class="home-navlink2 button-mobile button">
+          <a href="team.html" class="home-navlink2 button-mobile button">
             start wandering
           </a>
           <h2 class="home-header2">...</h2>
@@ -131,36 +131,16 @@
             <span></span>
             <span class="home-text15">scary</span>
           </h1>
-          <animate-on-reveal
-            animation="slideInRight"
-            duration="2s"
-            delay="0s"
-            direction="normal"
-            easing="ease"
-            iteration="1"
-          >
-            <img
-              alt="image"
-              src="public/Images/4-700w.jpeg"
-              data-thq-animate-on-reveal="true"
-              class="home-image3"
-            />
-          </animate-on-reveal>
-          <animate-on-reveal
-            animation="slideInLeft"
-            duration="2s"
-            delay="0s"
-            direction="normal"
-            easing="ease"
-            iteration="1"
-          >
-            <img
-              alt="image"
-              src="public/Images/3-700w.jpeg"
-              data-thq-animate-on-reveal="true"
-              class="home-image4"
-            />
-          </animate-on-reveal>
+          <img
+            alt="image"
+            src="public/Images/4-700w.jpeg"
+            class="home-image3"
+          />
+          <img
+            alt="image"
+            src="public/Images/3-700w.jpeg"
+            class="home-image4"
+          />
           <p class="home-caption1">“is that area okay to walk through?”</p>
           <p class="home-caption2">— academic wanderer</p>
           <p class="home-caption3">— city wanderer</p>
@@ -230,34 +210,28 @@
             <span></span>
             <span class="home-text20">team</span>
           </h1>
-          <animate-on-reveal animation="slideInRight" duration="2s">
-            <p data-thq-animate-on-reveal="true" class="home-caption5">
-              <span class="home-text21">Interactive Map:</span>
-              <span>
-                Allows users to zoom in and out, and click on specific areas for
-                detailed crime statistics.
-              </span>
-            </p>
-          </animate-on-reveal>
-          <animate-on-reveal animation="slideInLeft" duration="2s">
-            <p data-thq-animate-on-reveal="true" class="home-caption6">
-              <span class="home-text23">Color-Coded Zones:</span>
-              <span>
-                Displays areas with varying levels of danger using a color-coded
-                system (e.g., green for safe, yellow for caution, red for high
-                danger).
-              </span>
-            </p>
-          </animate-on-reveal>
-          <animate-on-reveal animation="slideInRight" duration="2s">
-            <p data-thq-animate-on-reveal="true" class="home-caption7">
-              <span class="home-text25">Crime Data Integration:</span>
-              <span class="home-text26">
-                Utilizes real-time crime data from local law enforcement and
-                public safety agencies.
-              </span>
-            </p>
-          </animate-on-reveal>
+          <p class="home-caption5">
+            <span class="home-text21">Interactive Map:</span>
+            <span>
+              Allows users to zoom in and out, and click on specific areas for
+              detailed crime statistics.
+            </span>
+          </p>
+          <p class="home-caption6">
+            <span class="home-text23">Color-Coded Zones:</span>
+            <span>
+              Displays areas with varying levels of danger using a color-coded
+              system (e.g., green for safe, yellow for caution, red for high
+              danger).
+            </span>
+          </p>
+          <p class="home-caption7">
+            <span class="home-text25">Crime Data Integration:</span>
+            <span class="home-text26">
+              Utilizes real-time crime data from local law enforcement and
+              public safety agencies.
+            </span>
+          </p>
         </section>
         <footer class="home-footer">
           <div class="home-main">
@@ -279,13 +253,5 @@
       defer=""
       src="https://unpkg.com/@teleporthq/react-components/dist/animate-on-reveal.umd.js"
     ></script>
-    <script>
-      window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/speed-insights/script.js"></script>
-    <script>
-      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
