Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </header>
         </header>
         <section class="home-hero">
-          <a href="sf.html" class="home-navlink2 button-mobile button">
+          <a href="team.html" class="home-navlink2 button-mobile button">
             start wandering
           </a>
           <h2 class="home-header2">...</h2>
@@ -154,18 +154,15 @@
           />
         </section>
         <section class="home-description2">
-          <animate-on-reveal>
-            <video
-              src="public/map-spin%20(1)%20(1)%20(1).mp4"
-              loop="true"
-              muted="true"
-              preload="auto"
-              autoplay="true"
-              playsinline="true"
-              data-thq-animate-on-reveal="true"
-              class="home-video"
-            ></video>
-          </animate-on-reveal>
+          <video
+            src="public/map-spin%20(1)%20(1)%20(1).mp4"
+            loop="true"
+            muted="true"
+            preload="auto"
+            autoplay="true"
+            playsinline="true"
+            class="home-video"
+          ></video>
           <h1 class="home-header5">wandr</h1>
           <h1 class="home-header6">
             <span class="home-text16">explore cities confidently with</span>
@@ -249,17 +246,5 @@
       defer=""
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
     ></script>
-    <script
-      defer=""
-      src="https://unpkg.com/@teleporthq/react-components/dist/animate-on-reveal.umd.js"
-    ></script>
-    <script>
-      window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/speed-insights/script.js"></script>
-    <script>
-      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
