Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div>
       <link href="./index.css" rel="stylesheet" />
 
-      <div class="home-container">
+      <div class="home-container1">
         <header class="home-header1">
           <header data-thq="thq-navbar" class="home-navbar">
             <div
@@ -110,7 +110,7 @@
           </header>
         </header>
         <section class="home-hero">
-          <a href="sf.html" class="home-navlink2 button-mobile button">
+          <a href="team.html" class="home-navlink2 button-mobile button">
             start wandering
           </a>
           <h2 class="home-header2">...</h2>
@@ -168,16 +168,13 @@
             <span class="home-text16">explore cities confidently with</span>
             <span></span>
           </h1>
-          <img
-            alt="image"
-            src="public/Images/kieran-200w.jpg"
-            class="home-image6"
-          />
-          <img
-            alt="image"
-            src="public/Images/ruby-200w.jpg"
-            class="home-image7"
-          />
+          <div class="home-container2">
+            <img
+              alt="image"
+              src="public/Images/kieran-400w.jpg"
+              class="home-image6"
+            />
+          </div>
           <a
             href="https://www.linkedin.com/in/kierandwallace/"
             target="_blank"
@@ -186,8 +183,8 @@
           >
             <img
               alt="image"
-              src="public/Images/linkedin-800h.png"
-              class="home-image8"
+              src="public/Images/linkedin-2100h.png"
+              class="home-image7"
             />
           </a>
           <a
@@ -198,10 +195,15 @@
           >
             <img
               alt="image"
-              src="public/Images/linkedin-800h.png"
-              class="home-image9"
+              src="public/Images/linkedin-2100h.png"
+              class="home-image8"
             />
           </a>
+          <img
+            alt="image"
+            src="public/Images/ruby-400w.jpg"
+            class="home-image9"
+          />
           <h1 class="home-header7">
             <span class="home-text18">meet our</span>
             <span></span>
@@ -209,13 +211,14 @@
           </h1>
           <p class="home-caption5">
             <span class="home-text21">Interactive Map:</span>
+            <span class="home-text22"></span>
             <span>
               Allows users to zoom in and out, and click on specific areas for
               detailed crime statistics.
             </span>
           </p>
           <p class="home-caption6">
-            <span class="home-text23">Color-Coded Zones:</span>
+            <span class="home-text24">Color-Coded Zones:</span>
             <span>
               Displays areas with varying levels of danger using a color-coded
               system (e.g., green for safe, yellow for caution, red for high
@@ -223,8 +226,8 @@
             </span>
           </p>
           <p class="home-caption7">
-            <span class="home-text25">Crime Data Integration:</span>
-            <span class="home-text26">
+            <span class="home-text26">Crime Data Integration:</span>
+            <span class="home-text27">
               Utilizes real-time crime data from local law enforcement and
               public safety agencies.
             </span>
@@ -246,13 +249,5 @@
       defer=""
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
     ></script>
-    <script>
-      window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/speed-insights/script.js"></script>
-    <script>
-      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
