--- a/sf.html
+++ b/sf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-<title>San Francisco - wander</title>
+<title>San Francisco - wandr</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.js"></script>
@@ -20,6 +20,12 @@ body { margin: 0; padding: 0; }
         max-width: 200px;
     }
 </style>
+<link
+rel="shortcut icon"
+href="public/wander-logo1.png"
+type="icon/png"
+sizes="32x32"
+/>
 </head>
 <body>
 <div id="map"></div>
