--- a/edinburgh.html
+++ b/edinburgh.html
@@ -204,7 +204,7 @@ sizes="32x32"
 
         // create the popup for newington
         const popup_newington = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Marchmont: Crime Rate: Moderate. Characteristics: Residential area popular with students and families. Common Crimes: Property crimes and occasional thefts.'
+        'Newington: Crime Rate: Moderate. Characteristics: Diverse area with a mix of residential and commercial properties. Common Crimes: Property crimes and occasional anti-social behavior.'
     );
 
     // create DOM element for the marker
