--- a/sf.html
+++ b/sf.html
@@ -8,7 +8,7 @@
 <style>
 body { margin: 0; padding: 0; background-color: #eae7e2; }
 img {width: 32px; height: 32px; display: block;   margin-left: auto; margin-right: auto; margin-top: 2%;}
-#map { position: absolute; top: 5%; bottom: 0; width: 100%; }
+#map { position: absolute; top: 50px; bottom: 0; width: 100%; }
 #marker {
         background-image: url('/public/images/wander-logo1.png');
         background-size: cover;
@@ -29,9 +29,7 @@ sizes="32x32"
 />
 </head>
 <body>
-    <a href="/index.html">
-        <img src="/public/images/wander-logo1.png">
-      </a>
+<a href="/index.html"><img src="/public/images/wander-logo1.png"></a>
 <div id="map"></div>
 <script>
 	mapboxgl.accessToken = 'pk.eyJ1Ijoia2VlenkiLCJhIjoiY20zcHNtb2xuMGZ6YjJzc2VvaHdleDJvbCJ9.8JkhFV0AYdyeP7xsi2SehA';
