--- a/sf.html
+++ b/sf.html
@@ -7,7 +7,8 @@
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.js"></script>
 <style>
 body { margin: 0; padding: 0; background-color: #eae7e2; }
-img {width: 32px; height: 32px; display: block;   margin-left: auto; margin-right: auto; margin-top: 2%;}
+img {width: 32px; height: 32px; display: block;   margin-left: auto; margin-right: auto; margin-top: 0.5%;}
+@media(max-width: 430px) { img {width: 32px; height: 32px; display: block;   margin-left: auto; margin-right: auto; margin-top: 2%;}}
 #map { position: absolute; top: 50px; bottom: 0; width: 100%; }
 #marker {
         background-image: url('/public/images/wander-logo1.png');
