--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </header>
         </header>
         <section class="home-hero">
-          <a href="sf.html" class="home-navlink2 button-mobile button">
+          <a href="explore.html" class="home-navlink2 button-mobile button">
             start wandering
           </a>
           <h2 class="home-header2">...</h2>
