--- a/explore.html
+++ b/explore.html
@@ -35,7 +35,7 @@ sizes="32x32"
 <body>
 <a href="/index.html"><img src="/public/images/wander-logo1.png"></a>
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.3/mapbox-gl-geocoder.min.js"></script>
-<link rel="stylesheet" href="map.css" type="text/css">
+<link rel="stylesheet" href="explore.css" type="text/css">
 <style>
     .geocoder {
         position: absolute;
