--- a/explore.html
+++ b/explore.html
@@ -25,7 +25,7 @@ body { margin: 0; padding: 0; background-color: #eae7e2; }
 <body>
 <div id="images">
 <a href="/index.html"><img src="/public/images/wander-logo1.png" class="image left"></a>
-<img src="/public/Icons/3d.svg" class="image right" id="3d-image">
+<img src="/public/Icons/earth.svg" class="image right" id="earth-image">
 </div>
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.3/mapbox-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="explore.css" type="text/css">
@@ -92,21 +92,15 @@ body { margin: 0; padding: 0; background-color: #eae7e2; }
         );
     });
     
-    let is3D = true; // Variable to track the current pitch state
+    let isSatellite = false; // Variable to track the current map style
 
-document.getElementById('3d-image').addEventListener('click', () => {
-    if (is3D) {
-        map.flyTo({
-            pitch: 0, // Reset pitch to 0
-            essential: true
-        });
+    document.getElementById('earth-image').addEventListener('click', () => {
+    if (isSatellite) {
+        map.setStyle('mapbox://styles/keezy/cm6wgc2q200jo01saevaqbvy0'); // Original style
     } else {
-        map.flyTo({
-            pitch: 37, // Set pitch to 37
-            essential: true
-        });
+        map.setStyle('mapbox://styles/mapbox/satellite-streets-v12'); // Satellite style
     }
-    is3D = !is3D; // Toggle the pitch state
+    isSatellite = !isSatellite; // Toggle the style state
 });
 
         // create the popup for tenderloin
