--- a/explore.html
+++ b/explore.html
@@ -11,6 +11,9 @@ body { margin: 0; padding: 0; background-color: #eae7e2; }
 .left {width: 32px; height: 32px; margin-left: 3%; margin-top: 0.5%;}
 .right {width: 32px; height: 32px; margin-left: 1%; margin-top: 0.5%;}
 .pitch {width: 32px; height: 32px; margin-left: 88%; margin-top: 0.5%;}
+@media(max-width: 820px) { #images .left {width: 32px; height: 32px; margin-left: 5%; margin-top: 1%;}}
+@media(max-width: 820px) { #images .right {width: 32px; height: 32px; margin-left: 1%;}}
+@media(max-width: 820px) { #images .pitch {width: 32px; height: 32px; margin-left: 77%;}}
 @media(max-width: 430px) { #images .left {width: 32px; height: 32px; margin-left: 5%; margin-top: 3.5%;}}
 @media(max-width: 430px) { #images .right {width: 32px; height: 32px; margin-left: 1%;}}
 @media(max-width: 430px) { #images .pitch {width: 32px; height: 32px; margin-left: 66%;}}
