--- a/explore.html
+++ b/explore.html
@@ -76,29 +76,6 @@ body { margin: 0; padding: 0; background-color: #eae7e2; }
         localIdeographFontFamily: "'Noto Sans', 'Noto Sans CJK SC', sans-serif"
     });
 
-    map.on('style.load', () => {
-        // Insert the layer beneath any symbol layer.
-        const layers = map.getStyle().layers;
-        const labelLayerId = layers.find(
-            (layer) => layer.type === 'symbol' && layer.layout['text-field']
-        ).id;
-
-        // The 'building' layer in the Mapbox Streets
-        // vector tileset contains building height data
-        // from OpenStreetMap.
-        map.addLayer(
-            {
-                'id': 'add-3d-buildings',
-                'source': 'composite',
-                'source-layer': 'building',
-                'filter': ['==', 'extrude', 'true'],
-                'type': 'fill-extrusion',
-                'minzoom': 15,
-            },
-            labelLayerId
-        );
-    });
-
     let is3D = true; // Variable to track the current pitch state
 
 document.getElementById('3d-image').addEventListener('click', () => {
@@ -126,239 +103,13 @@ document.getElementById('3d-image').addEventListener('click', () => {
     }
     isSatellite = !isSatellite; // Toggle the style state
 });
+</script>
 
-        // create the popup for tenderloin
-        const popup = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Tenderloin: Crime Rate: High. Characteristics: Dense urban area with significant homeless population and social services. Common Crimes: Violent crimes, drug-related offenses, and property crimes.'
-    );
-
-    // create DOM element for the marker
-    const el = document.createElement('div');
-    el.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(el)
-        .setLngLat(tenderloin)
-        .setPopup(popup) // sets a popup on this marker
-        .addTo(map);
+<script src="sf-pin.js"></script>
+<script src="edinburgh-pin.js"></script>
 
 
-        // create the popup for soma
-        const popup_soma = new mapboxgl.Popup({ offset: 10 }).setText(
-        'South of Market (SoMa): Crime Rate: High. Characteristics: Mix of residential, commercial, and industrial areas. Common Crimes: Violent crimes and property crimes, especially at night.'
-    );
-
-    // create DOM element for the marker
-    const el2 = document.createElement('div');
-    el2.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(el2)
-        .setLngLat(soma)
-        .setPopup(popup_soma) // sets a popup on this marker
-        .addTo(map);
-
-        // create the popup for bayview
-        const popup_bayview = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Bayview-Hunters Point: Crime Rate: High. Characteristics: Historically underserved area with ongoing community improvement efforts. Common Crimes: Violent crimes and property crimes.'
-    );
-
-    // create DOM element for the marker
-    const el3 = document.createElement('div');
-    el3.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(el3)
-        .setLngLat(bayview)
-        .setPopup(popup_bayview) // sets a popup on this marker
-        .addTo(map);
-
-        // create the popup for sunset
-        const popup_senset = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Sunset District: Crime Rate: Moderate. Characteristics: Mostly residential, with a mix of single-family homes and apartments. Common Crimes: Property crimes, particularly in commercial zones.'
-    );
-
-    // create DOM element for the marker
-    const el5 = document.createElement('div');
-    el5.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(el5)
-        .setLngLat(sunset)
-        .setPopup(popup_senset) // sets a popup on this marker
-        .addTo(map);
-
-
-        // create the popup for richmond
-        const popup_richmond = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Richmond District: Crime Rate: Moderate. Characteristics: Diverse, family-friendly, with busy commercial areas. Common Crimes: Property crimes like theft and burglary, especially in busier parts.'
-    );
-
-    // create DOM element for the marker
-    const el4 = document.createElement('div');
-    el4.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(el4)
-        .setLngLat(richmond)
-        .setPopup(popup_richmond) // sets a popup on this marker
-        .addTo(map);
-
-        // create the popup for sunset
-        const popup_noe = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Noe Valley: Crime Rate: Moderate. Characteristics: Family-friendly, known for its small-town feel within the city. Common Crimes: Property crimes, such as theft and burglary.'
-    );
-
-    // create DOM element for the marker
-    const el6 = document.createElement('div');
-    el6.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(el6)
-        .setLngLat(noe)
-        .setPopup(popup_noe) // sets a popup on this marker
-        .addTo(map);
-
-        // create the popup for leith
-        const popup_leith = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Leith: Crime Rate: High. Characteristics: Diverse area with a mix of residential and commercial properties. Common Crimes: Higher rates of violent crimes and property crimes.'
-    );
-
-    // create DOM element for the marker
-    const elleith = document.createElement('div');
-    elleith.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(elleith)
-        .setLngLat(leith)
-        .setPopup(popup_leith) // sets a popup on this marker
-        .addTo(map);
-
-
-        // create the popup for new town
-        const popup_newtown = new mapboxgl.Popup({ offset: 10 }).setText(
-        'City Centre: Crime Rate: High. Characteristics: Busy commercial area with a high density of shops, bars, and restaurants. Common Crimes: Violent crimes, thefts, and anti-social behavior.'
-    );
-
-    // create DOM element for the marker
-    const elnewtown = document.createElement('div');
-    elnewtown.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(elnewtown)
-        .setLngLat(newtown)
-        .setPopup(popup_newtown) // sets a popup on this marker
-        .addTo(map);
-
-        // create the popup for gorgie
-        const popup_gorgie = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Gorgie: Crime Rate: High. Characteristics: Residential area with a mix of housing types. Common Crimes: Higher rates of property crimes and occasional violent crimes.'
-    );
-
-    // create DOM element for the marker
-    const elgorgie = document.createElement('div');
-    elgorgie.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(elgorgie)
-        .setLngLat(gorgie)
-        .setPopup(popup_gorgie) // sets a popup on this marker
-        .addTo(map);
-
-        // create the popup for sighthill
-        const popup_sighthill = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Sighthill: Crime Rate: High. Characteristics: Residential area with a mix of housing types. Common Crimes: Higher rates of property crimes and occasional violent crimes.'
-    );
-
-    // create DOM element for the marker
-    const elsighthill = document.createElement('div');
-    elsighthill.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(elsighthill)
-        .setLngLat(sighthill)
-        .setPopup(popup_sighthill) // sets a popup on this marker
-        .addTo(map);
-
-        // create the popup for niddrie
-        const popup_niddrie = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Niddrie: Crime Rate: High. Characteristics: Residential area with ongoing regeneration efforts. Common Crimes: Higher rates of violent crimes and anti-social behavior.'
-    );
-
-    // create DOM element for the marker
-    const elniddrie = document.createElement('div');
-    elniddrie.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(elniddrie)
-        .setLngLat(niddrie)
-        .setPopup(popup_niddrie) // sets a popup on this marker
-        .addTo(map);
-
-
-        // create the popup for stockbridge
-        const popup_stockbridge = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Stockbridge: Crime Rate: Moderate. Characteristics: Popular residential area with a village feel, known for its markets and cafes. Common Crimes: Property crimes and occasional thefts.'
-    );
-
-    // create DOM element for the marker
-    const elstockbridge = document.createElement('div');
-    elstockbridge.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(elstockbridge)
-        .setLngLat(stockbridge)
-        .setPopup(popup_stockbridge) // sets a popup on this marker
-        .addTo(map);
-
-        // create the popup for bruntsfield
-        const popup_bruntsfield = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Bruntsfield: Crime Rate: Moderate. Characteristics: Residential area with a mix of families and students, known for its parks and cafes.Common Crimes: Property crimes and occasional burglaries.'
-    );
-
-    // create DOM element for the marker
-    const elbruntsfield = document.createElement('div');
-    elbruntsfield.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(elbruntsfield)
-        .setLngLat(bruntsfield)
-        .setPopup(popup_bruntsfield) // sets a popup on this marker
-        .addTo(map);
-
-        // create the popup for marchmont
-        const popup_marchmont = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Marchmont: Crime Rate: Moderate. Characteristics: Residential area popular with students and families. Common Crimes: Property crimes and occasional thefts.'
-    );
-
-    // create DOM element for the marker
-    const elmarchmont = document.createElement('div');
-    elmarchmont.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(elmarchmont)
-        .setLngLat(marchmont)
-        .setPopup(popup_marchmont) // sets a popup on this marker
-        .addTo(map);
-
-        // create the popup for newington
-        const popup_newington = new mapboxgl.Popup({ offset: 10 }).setText(
-        'Newington: Crime Rate: Moderate. Characteristics: Diverse area with a mix of residential and commercial properties. Common Crimes: Property crimes and occasional anti-social behavior.'
-    );
-
-    // create DOM element for the marker
-    const elnewington = document.createElement('div');
-    elnewington.id = 'marker';
-
-    // create the marker
-    new mapboxgl.Marker(elnewington)
-        .setLngLat(newington)
-        .setPopup(popup_newington) // sets a popup on this marker
-        .addTo(map);
-
-
-
-
+<script>
             // Add the control to the map.
     const geocoder = new MapboxGeocoder({
         accessToken: mapboxgl.accessToken,
