--- a/explore.html
+++ b/explore.html
@@ -39,7 +39,7 @@ body { margin: 0; padding: 0; background-color: #eae7e2; }
 <!-- Add the message box -->
 <div id="message-box">
     <div id="message-content">
-        <p>Welcome to Wandr! Please click the button below to continue.</p>
+        <p>Welcome to Wandr! Our maps are created on reported data only and should be taken only as a guide.</p>
         <button id="continue-button">acknowledge</button>
     </div>
 </div>
